--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@midudev/tailwind-animations": "^0.2.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
